--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <link rel="stylesheet" href="index.css" />
 <h1>Welcome to News Nation</h1>
 <marquee><h1>Please login to access the profile page</h1></marquee>
-<div>
-  <label> Enter Your Username : </label>
-  <input type="text" placeholder="Enter your username" />
-</div>
-<br />
 
-<div>
-  <label> Enter Your Email Id : </label>
-  <input type="email" placeholder="Enter your email id" />
-</div>
-<br />
-<div>
-  <label> Enter Your Passward : </label>
-  <input type="password" placeholder="Enter your passward" />
-</div>
-<br />
+<body>
+        <div class="container">
+                <h1 style="text-align: center;">Sign up
+                        <a href="../index.html"> or Log in</a>
+                </h1>
+                <form>
+                        <label for="firstName" class="label-text">First name</label>
+                        <input type="text" id="firstName" placeholder="e.g., Mark" required>
+                        <label for="lastName" class="label-text">Last name</label>
+                        <input type="text" id="lastName" placeholder="e.g., Green" required>
+                        <label for="email" class="label-text">Email</label>
+                        <input type="email" id="email" placeholder="e.g., me@example.com" required>
+                        <label for="password" class="label-text">Password</label>
+                        <input type="password" id="password" placeholder="e.g., **********" required>
+                        <label for="mobile" class="label-text">Mobile number</label>
+                        <input type="tel" id="mobile" placeholder="e.g., 9988776655" required>
+                        <button type="submit" onclick="signup(firstName,lastName, email, password, mobile)" class="signin-btn">Sign up</button>
+                </form>
+        </div>
+</body>
 
-<a href="news.html">
-  <button>
-    Sign Up
-  </button>
-</a>
-
-
+</html>
