--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-<link rel="stylesheet" href="index.css" />
-<h1>Welcome to News Nation</h1>
-<marquee><h1>Please login to access the profile page</h1></marquee>
+<!DOCTYPE html>
+<html>
+
+<head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Sign up</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="../styles/sign-up.css" />
+</head>
 
 <body>
         <div class="container">
@@ -18,9 +25,11 @@
                         <input type="password" id="password" placeholder="e.g., **********" required>
                         <label for="mobile" class="label-text">Mobile number</label>
                         <input type="tel" id="mobile" placeholder="e.g., 9988776655" required>
-                        <button type="submit" onclick="signup(firstName,lastName, email, password, mobile)" class="signin-btn">Sign up</button>
+                        <a href="news.html"><button type="submit" onclick="signup(firstName,lastName, email, password, mobile)" class="signin-btn">Sign up</button></a>
                 </form>
         </div>
 </body>
+
+
 
 </html>
